# ex_llm

./: .env.example  .envrc  .gist_id  .gitignore  .gitignore.additions  .gitmodules  .jules-todos.json  .prototools  .singularityignore  ACTUAL_ENGINE_ANALYSIS.md  ACTUAL_NIFS.md  ADAPTIVE_CONFIDENCE_GATING.md  ADDING_PROJECTS.md  ADD_MODULEDOC_PROMPT.md  AGENTS.md  AGENTS_VS_ENGINES_PATTERN.md  AGENT_BRIEFING.md  AGENT_CONTROL_IMPLEMENTATION_SUMMARY.md  AGENT_COORDINATION_ROUTER_DESIGN.md  AGENT_DEPENDENCY_GRAPH.md  AGENT_DOCUMENTATION_SYSTEM.md  AGENT_EVOLUTION_STRATEGY.md  AGENT_EXECUTION_ARCHITECTURE.md  AGENT_EXECUTION_SUMMARY.md  AGENT_FIX_CHECKLIST.md  AGENT_FLOW_TRACKING_DESIGN.md  AGENT_REALITY_SUMMARY.md  AGENT_REVIEW_EXECUTIVE_SUMMARY.md  AGENT_SELF_EVOLUTION_2.3.0.md  AGENT_SYSTEM_COMPLETE.md  AGENT_SYSTEM_COMPREHENSIVE_REVIEW.md  AGENT_SYSTEM_CURRENT_STATE.md  AGENT_SYSTEM_FIX_CHECKLIST.md  AGENT_SYSTEM_INFRASTRUCTURE.md  AGENT_SYSTEM_QUICK_REFERENCE.md  AGENT_SYSTEM_REALITY_CHECK.md  AGENT_TOOL_VALIDATION_INTEGRATION.md  AGE_GRAPH_DATABASE_IMPLEMENTATION.md  AGE_IMPLEMENTATION_SUMMARY.md  AGE_INSTALLATION_GUIDE.md  (+728 more)
products/scanner/mcp-server/: Cargo.toml  README.md
rust/: .github_reminder_deadcode_audit.md  BUILD_STATUS.md  Cargo.toml  README.md  moon.yml  parser_architecture.md
rust-central/: Cargo.toml  code_engine  knowledge_engine  moon.yml  parser_engine  prompt_engine  quality_engine
rust-central/_archive/: README.md
rust-central/analysis_engine/: reorganize.sh
rust-central/architecture_engine/: Cargo.toml
rust-central/architecture_engine/framework_detection/: UNWIRED.md
rust-central/architecture_engine/src/: naming_suggestions.rs  naming_utilities.rs
rust-central/code_engine/: Cargo.toml
rust-central/code_engine/rust-code-analyzer/: .taskcluster.yml  Cargo.toml
rust-central/code_engine/src/: analyzer.rs  lib.rs  paths.rs  sparc_methodology.rs
rust-central/code_parsing_engine/: Cargo.toml
rust-central/code_parsing_engine/src/: parser_metadata.rs
rust-central/consolidated_detector/src/: main.rs
rust-central/embedding_engine/: Cargo.toml
rust-central/embedding_engine/.moon/: project.yml
rust-central/embedding_engine/src/: lib.rs
rust-central/knowledge_cache_engine/: Cargo.toml
rust-central/knowledge_cache_engine/src/: lib.rs
rust-central/knowledge_engine/: Cargo.toml
rust-central/knowledge_engine/src/: lib.rs
rust-central/knowledge_intelligence/.moon/: project.yml
rust-central/knowledge_intelligence/src/: lib.rs
rust-central/package_central_service/src/: github.rs  processor.rs  template_validator.rs
rust-central/package_engine/src/: engine.rs
rust-central/package_engine/templates/: elixir-nats-consumer.json
rust-central/package_intelligence/: Cargo.toml  build.rs
rust-central/package_intelligence/src/: cache.rs
rust-central/package_intelligence/templates/: sparc-implementation.json
rust-central/package_intelligence/tests/: semver_tech_profile_tests.rs
rust-central/parser_engine/dependency/: Cargo.toml
rust-central/parser_engine/polyglot/: Cargo.toml
rust-central/prompt_engine/src/: htdag_integration.rs  microservice_templates.rs  nats_service.rs  template_loader.rs  templates.rs  token_usage.rs
rust-central/prompt_intelligence/src/: dspy_data.rs  lib.rs  microservice_templates.rs  nats_service.rs
rust-central/prompt_intelligence/tests/: comprehensive_integration.rs
rust-central/quality_engine/: Cargo.toml
rust-central/quality_engine/src/: lib.rs
rust-central/semantic_embedding_engine/src/: training.rs
rust-central/tech_detection_engine/: README.md
rust-central/tech_detection_engine/src/: ai_client.rs  tech_detector.rs  (+1 more)
rust-central/unified_server/: Cargo.toml
rust/analysis_engine/: CODEBASE_CAPABILITIES.md  Cargo.toml  SEARCH_COMPARISON.md
rust/analysis_suite/: BUILD_STATUS.md  CLEANUP_SUMMARY.md  COMPLETE_ANALYSIS_ARCHITECTURE.md  Cargo.toml  GITHUB_INTEGRATION.md  PARSER_CAPABILITIES_ANALYSIS.md  PARSER_COVERAGE_INTEGRATION.md  RUST_FULLTEXT_SEARCH.md  TAVILY_INTEGRATION.md  UNIVERSAL_PARSER_INTEGRATION.md
rust/architecture/: Cargo.toml
rust/architecture_engine/: Cargo.toml  README.md  mix.exs
rust/code_analysis/: Cargo.toml  MISSING_ITEMS.md  TESTING_STRATEGY.md
rust/code_engine/: CENTRALCLOUD_IMPLEMENTATION_COMPLETE.md  Cargo.toml  architecture_engine  mix.exs
rust/code_parsing_engine/: Cargo.toml
rust/code_quality_engine/: ANALYZER_COMPLETE.md  CENTRALCLOUD_INTEGRATION_PLAN.md  Cargo.toml  WARNINGS_ANALYSIS.md  WARNING_FIX_SUMMARY.md  mix.exs
rust/codeintelligence_server/: Cargo.toml
rust/consolidated_detector/: Cargo.toml
rust/db_service/: Cargo.toml
rust/dependency-parser/: Cargo.toml
rust/dependency_parser/: Cargo.toml
rust/embedding_engine/: Cargo.toml
rust/embedding_trainer/: Cargo.toml  README.md
rust/framework/: Cargo.toml
rust/knowledge/: Cargo.toml
rust/linting_engine/: mix.exs
rust/nifs/: .gitkeep
rust/package_analysis_suite/: framework_patterns.json
rust/package_registry_indexer/: Cargo.toml  NATS_SUBJECTS.md  README.md
rust/parser_engine/: BUILD_SUCCESS.md  Cargo.toml  mix.exs
rust/prompt/: Cargo.toml
rust/prompt_analysis_suite/: Cargo.toml
rust/prompt_engine/: CORRECT_ARCHITECTURE.md  CURRENT_STATUS.md  Cargo.toml  SMART_STORAGE_ARCHITECTURE.md  mix.exs
rust/quality/: Cargo.toml
rust/quality_engine/: Cargo.toml
rust/scripts/: analyze_dead_code.sh  scan_dead_code.sh
rust/semantic/: Cargo.toml
rust/semantic_embedding_engine/: Cargo.toml
rust/service/: .gitkeep
rust/source-code-parser/: Cargo.toml
rust/sparc_fact_system_rust/: COLLECTORS_ARCHITECTURE.md  Cargo.toml  FRAMEWORK_SCHEMA.md
rust/src/: lib.rs
rust/storage/: Cargo.toml
rust/tech_detection_engine/: Cargo.toml
rust/tech_detector/: Cargo.toml
rust/template/: Cargo.toml
rust/tool_doc_index/: Cargo.toml  MIGRATION_STATUS.md  STORAGE_ARCHITECTURE.md  UNIVERSAL_FACT_SCHEMA.md  build.rs
rust/unified_server/: Cargo.toml
rust/universal_parser/: Cargo.toml
rust_global/template_service/: Cargo.toml  README.md
rustv2/prompt/: Cargo.toml
(+7202 files in other folders)
