[workspace]
resolver = "2"
members = [
    "rust/code_quality_engine",
    "rust/linting_engine",
    "rust/parser_engine/core",
    "rust/parser_engine/formats/dependency",
    "rust/parser_engine/formats/template_definitions",
    # Broken parsers (parser_core API mismatch) - excluded from workspace
    # "rust/parser_engine/languages/rust",
    # "rust/parser_engine/languages/elixir",
    # "rust/parser_engine/languages/erlang",
    "rust/parser_engine/languages/python",
    "rust/parser_engine/languages/javascript",
    "rust/parser_engine/languages/typescript",
    "rust/parser_engine/languages/gleam",
    "rust/prompt_engine",
    "centralcloud/rust/package_intelligence",
    "rust/template",
    "rust/architecture_engine",
]

[workspace.dependencies]
# From rust/Cargo.toml - consolidated workspace dependencies

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
async-nats = "0.44.2"

# Collections & Concurrency
ahash = "0.8"
dashmap = "6.1.0"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
smallvec = "1.13"
once_cell = "1.19"
num_cpus = "1.16"

# Graph & Data Structures
petgraph = "0.6"
ndarray = "0.16"

# Text Processing
regex = "1.0"
heck = "0.5"

# File Operations
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"
tempfile = "3.0"
dirs = "6.0.0"

# Database
redb = "3.1.0"
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Config
toml = "0.9.8"

# Logging
tracing = "0.1.41"
log = "0.4"
tracing-subscriber = "0.3"

# HTTP (optional)
reqwest = { version = "0.12.23", features = ["json"] }

# Parsing
tree-sitter = "0.25.10"
futures = "0.3"
tokei = "12.1"
ast-grep-core = "0.39.6"
tree-sitter-language = "0.1.5"

# Tree-sitter language parsers
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-erlang = "0.15.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-gleam = "1.0.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-swift = "0.7.1"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-lua = "0.2.0"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.1"
tree-sitter-bash = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"

# Scripting languages
tree-sitter-perl = "0.0.1"
tree-sitter-powershell = "0.25.9"

# Mobile languages
tree-sitter-kotlin = "0.3.8"
tree-sitter-dart = "0.0.4"

# Data languages
tree-sitter-toml = "0.20.0"
tree-sitter-toml-ng = "0.7.0"                # Configuration files (updated for tree-sitter 0.25)
tree-sitter-xml = "0.7.0"
tree-sitter-md = { git = "https://github.com/mikkihugo/tree-sitter-markdown", branch = "update-tree-sitter-0.25", features = ["parser"] }  # Markdown documentation (fork with tree-sitter 0.25)
tree-sitter-sql = "0.0.2" # This is the old one, sequel is the new one. Keeping both in case of mixed usage.
tree-sitter-sequel = "0.3.11"                # SQL database queries (updated for tree-sitter 0.25)

# Infrastructure languages
tree-sitter-dockerfile = "0.2.0"
tree-sitter-dockerfile-updated = "0.2.0"     # Docker containerization (updated for tree-sitter 0.25)

# System languages
tree-sitter-zig = "1.1.2"
tree-sitter-nim = "0.0.1"
tree-sitter-v = "0.0.1"

# Testing
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = "0.7.0"

# Rustler (for NIFs)
rustler = "0.37.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 16

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

