[workspace]
resolver = "2"
members = [
    # Rust NIF engines - now in packages/ as standalone Moon projects (publishable)
    "packages/code_quality_engine",
    "packages/linting_engine",
    "packages/parser_engine",
    "packages/parser_engine/core",
    "packages/parser_engine/formats/dependency",
    "packages/parser_engine/formats/template_definitions",
    # Singularity Code Analysis - standalone complexity analyzer
    "packages/singularity-code-analysis",
    # Broken parsers (parser_core API mismatch) - excluded from workspace
    # "packages/parser_engine/languages/rust",
    # "packages/parser_engine/languages/elixir",
    # "packages/parser_engine/languages/erlang",
    "packages/parser_engine/languages/python",
    "packages/parser_engine/languages/javascript",
    "packages/parser_engine/languages/typescript",
    "packages/parser_engine/languages/gleam",
    "packages/parser_engine/languages/c",
    "packages/parser_engine/languages/cpp",
    "packages/parser_engine/languages/csharp",
    "packages/parser_engine/languages/java",
    "packages/parser_engine/languages/go",
    "packages/parser_engine/languages/bash",
    "packages/parser_engine/languages/json",
    "packages/parser_engine/languages/yaml",
    "packages/parser_engine/languages/lua",
    "packages/parser_engine/languages/markdown",
    "packages/parser_engine/languages/dockerfile",
    "packages/parser_engine/languages/toml",
    "packages/parser_engine/languages/sql",
    "packages/parser_engine/languages/ruby",
    "packages/parser_engine/languages/php",
    "packages/parser_engine/languages/dart",
    "packages/parser_engine/languages/swift",
    "packages/parser_engine/languages/clojure",
    "packages/parser_engine/languages/scala",
    "packages/prompt_engine",
    "packages/package_intelligence",
    "packages/patterns_store",
    # Singularity Products
    "products/singularity-smart-package-context/backend",
    "products/singularity-smart-package-context/mcp-server",
]

exclude = [
    # Elixir native crates (Rustler NIFs) - excluded from workspace to avoid conflicts
    # These are compiled by Rustler from Elixir apps, not as part of the main workspace
    "nexus/singularity/native/pattern_registry_nif",
]

# Shared dependencies for all workspace members
[workspace.dependencies]
# From rust/Cargo.toml - consolidated workspace dependencies

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"

# Collections & Concurrency
ahash = "0.8"
dashmap = "6.1.0"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
smallvec = "1.13"
once_cell = "1.19"
num_cpus = "1.16"

# Graph & Data Structures
petgraph = "0.6"
ndarray = "0.16"

# Text Processing
regex = "1.0"
heck = "0.5"

# File Operations
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"
tempfile = "3.0"
dirs = "6.0.0"

# Database
redb = "3.1.0"
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Hashing
sha2 = "0.10"

# Time

# Tree-sitter parsing
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-erlang = "0.15.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-bash = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-lua = "0.2.0"
tree-sitter-md = "0.5.1"
tree-sitter-sequel = "0.3.11"
tree-sitter-dockerfile-updated = "0.2.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-language = "0.1.5"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin", rev = "57fb4560ba8641865bc0baa6b3f413b236112c4c" }
tree-sitter-ruby = "0.21.0"
tree-sitter-php = "0.24.2"
tree-sitter-dart = "0.0.4"
tree-sitter-swift = "0.7.1"
tree-sitter-clojure = "0.1.0"
tree-sitter-scala = "0.24.0"

# Rustler NIF
rustler = "0.37.0"

# AST Grep
ast-grep-core = "0.39.6"
chrono = { version = "0.4", features = ["serde"] }

# UUID (enable v7 across workspace)
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }

# Config
toml = "0.9.8"

# Logging
tracing = "0.1.41"
log = "0.4"
tracing-subscriber = "0.3"

# HTTP (optional)
reqwest = { version = "0.12.23", features = ["json"] }

tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = "0.7.0"

# Rustler (for NIFs)

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = true
codegen-units = 16

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
