[workspace]
resolver = "2"

members = [
    # Singularity NIFs (loaded by Singularity Elixir app)
    "architecture_engine",
    "code_engine",
    "embedding_engine",
    "parser_engine",
    "prompt_engine",          # V1 (rustv2/prompt is V2)
    "quality_engine",
    "knowledge_engine",
    "parser_engine/polyglot",
    "parser_engine/core",
    "parser_engine/languages/*",

    # Central Cloud Service (standalone binary via NATS)
    "package_intelligence",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Elixir NIF
rustler = "0.34"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
async-nats = "0.33"

# Collections & Concurrency
ahash = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
smallvec = "1.13"
once_cell = "1.19"
num_cpus = "1.16"

# Graph & Data Structures
petgraph = "0.6"
ndarray = "0.16"

# Text Processing
regex = "1.0"
heck = "0.5"

# File Operations
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"
tempfile = "3.0"
dirs = "5.0"

# Database
redb = "2.1"
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
log = "0.4"
tracing-subscriber = "0.3"

# HTTP (optional)
reqwest = { version = "0.12", features = ["json"] }

# Parsing
tree-sitter = "0.25.10"
futures = "0.3"
tokei = "12.1"

# Tree-sitter language parsers
tree-sitter-elixir = "0.3.4"
tree-sitter-erlang = "0.15.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-bash = "0.25.0"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# Testing
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = "0.5"

# CLI (for package_intelligence)
clap = { version = "4.4", features = ["derive", "cargo", "env", "unicode"] }

# Compression (for package_intelligence)
flate2 = "1.0"
tar = "0.4"

# XML parsing (for package registries)
quick-xml = "0.31"

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
