[workspace]
resolver = "2"
members = [
    "code_analysis",
    "knowledge",
    "parser/core",
    "parser/polyglot",
    "parser/formats/dependency",
    "parser/formats/template_definitions",
    "parser/languages/rust",
    "parser/languages/elixir",
    "parser/languages/python",
    "parser/languages/javascript",
    "parser/languages/typescript",
    "parser/languages/gleam",
    "prompt",
    "service/intelligence_hub",
    "service/package_intelligence",
    "template",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Elixir NIF
rustler = "0.34"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
async-nats = "0.33"

# Collections & Concurrency
ahash = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
smallvec = "1.13"
once_cell = "1.19"
num_cpus = "1.16"

# Graph & Data Structures
petgraph = "0.6"
ndarray = "0.16"

# Text Processing
regex = "1.0"
heck = "0.5"

# File Operations
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"
tempfile = "3.0"
dirs = "5.0"

# Database
redb = "2.1"
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
log = "0.4"
tracing-subscriber = "0.3"

# HTTP (optional)
reqwest = { version = "0.12", features = ["json"] }

# Parsing
tree-sitter = "0.25.10"  # Latest - matches what language parsers need
futures = "0.3"
tokei = "12.1"

# Tree-sitter language parsers (ONLY languages Singularity actually uses)
tree-sitter-elixir = "0.3.4"         # Main app language
tree-sitter-erlang = "0.15.0"        # BEAM runtime language
tree-sitter-gleam = "1.0.0"          # Type-safe BEAM modules
tree-sitter-rust = "0.24.0"          # NIFs and tools
tree-sitter-javascript = "0.25.0"    # AI server (Bun)
tree-sitter-typescript = "0.23.2"    # AI server (Bun)
tree-sitter-python = "0.25.0"        # Scripts (if any)
tree-sitter-json = "0.24.8"          # Config files
tree-sitter-yaml = "0.7.2"           # Config files
tree-sitter-bash = "0.25.0"          # Shell scripts

# Testing
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = "0.5"
