[workspace]
resolver = "2"
members = [
    "code_engine",
    "embedding_engine",
    "quality_engine",
    "parser_engine/core",
    "parser_engine",  # NIF wrapper - Rustler builds this separately
    # "parser_engine/polyglot",  # Excluded: Built separately as NIF by Rustler (causes workspace conflicts)
    # Working standalone parsers (no parser_core dependency)
    # "parser_engine/languages/markdown",  # TODO: Update for tree-sitter 0.25 API (QueryMatches iterator changes)
    "parser_engine/languages/lua",
    # "parser_engine/languages/sql",       # TODO: Update for tree-sitter 0.25 API (uses tree-sitter-sequel now)
    # "parser_engine/languages/dockerfile", # TODO: Update for tree-sitter 0.25 API (uses tree-sitter-dockerfile-updated now)
    # "parser_engine/languages/toml",      # TODO: Update for tree-sitter 0.25 API (uses tree-sitter-toml-ng now)
    # All language parsers enabled
    "parser_engine/languages/rust",
    "parser_engine/languages/elixir",
    "parser_engine/languages/erlang",
    "parser_engine/languages/python",
    "parser_engine/languages/javascript",
    "parser_engine/languages/typescript",
    "parser_engine/languages/gleam",
    "parser_engine/languages/json",
    "parser_engine/languages/yaml",
    "parser_engine/languages/bash",
    "parser_engine/languages/go",
    "parser_engine/languages/java",
    "parser_engine/languages/csharp",
    "parser_engine/languages/c",
    "parser_engine/languages/cpp",
    # Format parsers
    "parser_engine/formats/dependency",
    "parser_engine/formats/template_definitions",
    "parser_engine/analyzers/rust_code_analysis",  # Mozilla rust-code-analysis (complexity metrics)
    "prompt_engine",
    "architecture_engine",
    "template",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Elixir NIF (must match mix.exs version: 0.37)
rustler = "0.37"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
async-nats = "0.33"

# Collections & Concurrency
ahash = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
smallvec = "1.13"
once_cell = "1.19"
num_cpus = "1.16"

# Graph & Data Structures
petgraph = "0.6"
ndarray = "0.16"

# Text Processing
regex = "1.0"
heck = "0.5"

# File Operations
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"
tempfile = "3.0"
dirs = "5.0"

# Database
redb = "2.1"
tokio-postgres = "0.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }

# Hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
log = "0.4"
tracing-subscriber = "0.3"

# HTTP (optional)
reqwest = { version = "0.12", features = ["json"] }

# Parsing
tree-sitter = "0.25.10"  # Latest - matches what language parsers need
futures = "0.3"
tokei = "12.1"
ast-grep-core = "0.39"    # Structural search, linting, code transformation (latest version)
tree-sitter-language = "0.1.5"

# Tree-sitter language parsers
tree-sitter-elixir = "0.3.4"         # Main app language
tree-sitter-erlang = "0.15.0"        # BEAM runtime language
tree-sitter-gleam = "1.0.0"          # Type-safe BEAM modules
tree-sitter-rust = "0.24.0"          # NIFs and tools
tree-sitter-javascript = "0.25.0"    # AI server (Bun)
tree-sitter-typescript = "0.23.2"    # AI server (Bun)
tree-sitter-python = "0.25.0"        # Scripts (if any)
tree-sitter-json = "0.24.8"          # Config files
tree-sitter-yaml = "0.7.2"           # Config files
tree-sitter-bash = "0.25.0"          # Shell scripts
tree-sitter-go = "0.25"              # Go language
tree-sitter-java = "0.23"            # Java language
tree-sitter-c-sharp = "0.23.1"       # C# language
tree-sitter-c = "0.24"               # C language
tree-sitter-cpp = "0.23"             # C++ language
tree-sitter-md = { git = "https://github.com/mikkihugo/tree-sitter-markdown", branch = "update-tree-sitter-0.25", features = ["parser"] }  # Markdown documentation (fork with tree-sitter 0.25)
tree-sitter-lua = "0.2.0"                    # Lua scripting
tree-sitter-sequel = "0.3.11"                # SQL database queries (updated for tree-sitter 0.25)
tree-sitter-dockerfile-updated = "0.2.0"     # Docker containerization (updated for tree-sitter 0.25)
tree-sitter-toml-ng = "0.7.0"                # Configuration files (updated for tree-sitter 0.25)

# Testing
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
criterion = "0.5"
