[package]
name = "code_analysis"
version = "0.1.0"
edition = "2021"
description = "Code analysis engine for metrics, performance, security, and semantic search"
authors = ["Singularity Team"]
license = "MIT"
repository = "https://github.com/singularity/singularity"
readme = "README.md"
keywords = ["code-analysis", "naming", "quality", "metrics", "patterns"]
categories = ["development-tools", "text-processing"]

[lib]
name = "code_analysis"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # Both library and NIF

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Graph analysis
petgraph = { workspace = true }

# Text processing
regex = { workspace = true }

# Advanced analysis libraries
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Memory stats for performance analysis
memory-stats = "1.0"

# Logging
tracing = { workspace = true }

# Array operations for vectors
ndarray = { workspace = true }

# Serialization
bincode = { workspace = true }

# Directory utilities
dirs = { workspace = true }

# Temporary directory for tests
tempfile = { workspace = true }

# Database
redb = { workspace = true }

# Hashing
sha2 = { workspace = true }
seahash = "4.1"

# NIF support (optional - only when used from Elixir)
rustler = { workspace = true, optional = true }

# ML & Embeddings (optional)
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
tokenizers = { version = "0.22.1", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4.3", optional = true, features = ["tokio"] }
thiserror = { workspace = true }

# Full-text search
tantivy = { version = "0.25.0", optional = true }

# Internal SPARC crates
quality_lib = { path = "../quality" }

# Parser dependencies - all 15 working parsers
rust_parser = { path = "../parser/languages/rust" }
python_parser = { path = "../parser/languages/python" }
javascript_parser = { path = "../parser/languages/javascript" }
typescript_parser = { path = "../parser/languages/typescript" }
elixir_parser = { path = "../parser/languages/elixir" }
erlang_parser = { path = "../parser/languages/erlang" }
gleam_parser = { path = "../parser/languages/gleam" }
json_parser = { path = "../parser/languages/json" }
yaml_parser = { path = "../parser/languages/yaml" }
bash_parser = { path = "../parser/languages/bash" }
go_parser = { path = "../parser/languages/go" }
java_parser = { path = "../parser/languages/java" }
csharp_parser = { path = "../parser/languages/csharp" }
c_parser = { path = "../parser/languages/c" }
cpp_parser = { path = "../parser/languages/cpp" }
parser-code = { path = "../parser/polyglot" }

# Missing dependencies (commented out - directories don't exist)
prompt = { path = "../prompt" }
# linting_engine = { path = "../linting" }  # Does not exist - quality_lib doesn't have LintingEngine
# sparc_methodology = { path = "../methodology" }  # Does not exist

# NATS for context queries
async-nats = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["nif"]
nif = ["rustler"]  # Enable NIF support for Elixir integration
# Semantic embeddings with Candle transformers
semantic = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
advanced-search = ["tantivy"]
