[package]
name = "embedding_engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic placeholder embedding engine"
license = "MIT"

[lib]
name = "embedding_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["std"] }
rand_chacha = "0.3"
sha2 = "0.10"
rustler = "0.34"
