[package]
name = "knowledge_cache_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustler = "0.34"
async-nats = { workspace = true }
parking_lot = { workspace = true }  # Fast RwLock for cache
once_cell = { workspace = true }  # Global static
