[package]
name = "analysis-engine"
version = "0.1.0"
edition = "2021"
description = "Pure codebase analysis library for intelligent code understanding and naming"
authors = ["PrimeCode Team"]
license = "MIT"
repository = "https://github.com/primecode/zenflow"
readme = "README.md"
keywords = ["code-analysis", "naming", "quality", "metrics", "patterns"]
categories = ["development-tools", "text-processing"]

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Graph analysis
petgraph = { workspace = true }

# Text processing
regex = { workspace = true }

# Advanced analysis libraries
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }  # For config file parsing

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Time handling
chrono = { workspace = true, features = ["serde"] }


# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Main sparc-engine dependency for core types - DISABLED to break circular dependency
# sparc-engine = { path = "../.." }

# Error handling
anyhow = { workspace = true }

# Memory stats for performance analysis
memory-stats = "1.0"

# Logging
tracing = { workspace = true }

# Array operations for vectors
ndarray = { workspace = true }

# Serialization
bincode = { workspace = true }

# Directory utilities
dirs = { workspace = true }

# Temporary directory for tests
tempfile = { workspace = true }

# Database
redb = { workspace = true }

# Hashing
sha2 = { workspace = true }
seahash = "4.1"

# ML & Embeddings (optional)
candle-core = { version = "0.7", optional = true }
candle-nn = { version = "0.7", optional = true }
candle-transformers = { version = "0.7", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", optional = true, features = ["tokio"] }  # Downloads models from HuggingFace
thiserror = { workspace = true }

# Full-text search
tantivy = { version = "0.21", optional = true }

# Internal SPARC crates
linting-engine = { path = "../linting_engine" }
dependency-parser = { path = "../dependency-parser" }
mozilla-code-analysis = { path = "../mozilla-code-analysis" }

# NATS for context queries
async-nats = { workspace = true }

# Framework detection (disabled - crate doesn't exist yet)
# framework-detector = { path = "../framework-detector" }


[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
# Semantic embeddings with Candle transformers (downloads all-MiniLM-L6-v2 from HuggingFace)
semantic = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
advanced-search = ["tantivy"]
