[package]
name = "architecture_engine"
version = "1.0.0"
authors = ["mikkihugo"]
edition = "2021"
description = "Central Architecture Engine - unified framework for all architectural analysis"
homepage = "https://github.com/mikkihugo/claude-code-zen"
repository = "https://github.com/mikkihugo/claude-code-zen"
license = "MIT"
readme = "README.md"
keywords = ["architecture", "naming", "patterns", "framework-detection", "package-registry", "central-engine"]
categories = ["algorithms", "development-tools"]

[lib]
name = "architecture_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # Both library and NIF

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# NIF support (optional - only when used from Elixir)
rustler = { version = "0.34", optional = true }

# Logging
tracing = "0.1"
log = "0.4"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# File operations
walkdir = "2.3"
glob = "0.3"
regex = "1.0"

# String case conversion
heck = "0.5"

# Additional dependencies for consolidated modules
once_cell = "1.19"
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.0"
tracing-subscriber = "0.3"

[[example]]
name = "ai_analysis_test"
path = "examples/ai_analysis_test.rs"

[features]
default = ["nif"]
nif = ["rustler"]  # Enable NIF support for Elixir integration

# Speed up dev builds
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
